remove gradient from text

--- a/packages/react/src/ComparisonTable/ComparisonTable.module.css
+++ b/packages/react/src/ComparisonTable/ComparisonTable.module.css
@@ -146,15 +146,15 @@
 }
 
 :global(.ComparisonTable--default) .ComparisonTable-cell-heading-label--featured {
-  /* Consider disabling until we have an a11y review */
-  color: transparent;
+  /* gradient on text... check with a11y team before enabling */
+  /* color: transparent;
   background: linear-gradient(
     89.46deg,
     var(--brand-ComparisonTable-featured-color-start) 0.87%,
     var(--brand-ComparisonTable-featured-color-end) 75.12%
   );
   -webkit-background-clip: text;
-  background-clip: text;
+  background-clip: text; */
   position: relative;
   z-index: 2;
 }
