--- a/packages/react/src/forms/FormControl/FormControl.module.css
+++ b/packages/react/src/forms/FormControl/FormControl.module.css
@@ -63,6 +63,10 @@
   width: 100%;
 }
 
+.FormControl-control--radio {
+  margin: 2px 0 0;
+}
+
 .FormControl-hint {
   color: var(--brand-color-text-muted);
   display: block;
