--- a/packages/react/src/forms/Radio/Radio.module.css
+++ b/packages/react/src/forms/Radio/Radio.module.css
@@ -23,8 +23,25 @@
   margin: 3px 3px 0px 5px; /* Emulate browser defaults */
 
   width: 20px;
-  outline: 1px solid var(--brand-control-radio-bg-default);
+  outline: none;
   box-shadow: 0 0 0 3px transparent;
+  position: relative;
+}
+
+/*
+Fixes safari bug where outline doesn't respect border-radius
+*/
+.Radio::before {
+  content: '';
+  position: absolute;
+  top: -4px;
+  right: -2px;
+  bottom: -2px;
+  left: -4px;
+  border: 2px solid var(--brand-control-radio-bg-default);
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
 }
 
 /**
@@ -75,7 +92,7 @@
 }
 
 .Radio-input:focus + .Radio {
-  box-shadow: 0 0 0 3px var(--brand-color-focus);
+  box-shadow: 0 0 0 4px var(--brand-color-focus);
 }
 
 /* TODO: Check with a11y team */
