add an actual change

--- a/packages/react/src/Button/Button.module.css
+++ b/packages/react/src/Button/Button.module.css
@@ -15,7 +15,7 @@
 
 .Button:focus:not(.Button--disabled) {
   outline: none;
-  box-shadow: 0 0 0 2px var(--brand-color-canvas-default), 0 0 0 5px var(--brand-color-focus);
+  box-shadow: 0 0 0 2px var(--brand-color-canvas-default), 0 0 0 5px green;
 }
 
 .Button--label {
