Updated max-width to use breakpoint value

--- a/packages/react/src/CTABanner/CTABanner.module.css
+++ b/packages/react/src/CTABanner/CTABanner.module.css
@@ -2,7 +2,7 @@
   position: relative;
   margin: 0 auto;
   display: flex;
-  max-width: 1280px;
+  max-width: var(--brand-breakpoint-xlarge);
 }
 
 .CTABanner--shadow::before {
