--- a/packages/react/src/CTABanner/CTABanner.module.css
+++ b/packages/react/src/CTABanner/CTABanner.module.css
@@ -30,7 +30,7 @@
   display: flex;
   flex-direction: column;
   gap: var(--base-size-16);
-  align-items: start;
+  align-items: flex-start;
   max-width: 800px;
   margin: 0 auto;
 }
