refactor design feedback

--- a/packages/react/src/AnchorNav/AnchorNav.module.css
+++ b/packages/react/src/AnchorNav/AnchorNav.module.css
@@ -1,3 +1,19 @@
+/*
+ * AnchorNav
+ * 
+ * 1. Globals
+ * 2. AnchorNav root and inner bounding containers
+ * 3. AnchorNav links
+ * 4. AnchorNav link labels
+ * 5. AnchorNav menu toggle button (narrow)
+ * 6. AnchorNav action
+ * 7. Custom animations
+ */
+
+/*
+ * 1. Globals
+ * TODO: Move into global reset
+ */
 :global(html) {
   scroll-behavior: smooth;
 }
@@ -8,17 +24,19 @@
   }
 }
 
+/*
+ * 2. AnchorNav root and inner bounding containers
+ */
 .AnchorNav {
+  display: flex;
   position: -webkit-sticky;
   position: sticky;
   top: 0;
   left: 0;
   right: 0;
-  display: flex;
-  padding: var(--base-size-16);
   background: var(--brand-color-canvas-default);
-  z-index: 91; /* must be higher than subdomain nav bar */
   padding: var(--base-size-12) var(--base-size-16);
+  z-index: 91; /* must be higher than subdomain nav bar */
 }
 
 .AnchorNav--stuck {
@@ -26,24 +44,8 @@
 }
 
 .AnchorNav--expanded {
-  z-index: 91;
   transform-style: preserve-3d;
-}
-
-.AnchorNav-inner-container {
-  display: flex;
-  max-width: 1280px;
-  width: 100%;
-  position: relative;
-  z-index: 91; /* must be higher than subdomain nav bar */
-  background: var(--brand-color-canvas-default);
-}
-
-/* Large breakpoint and up */
-@media screen and (min-width: 63.25rem) {
-  .AnchorNav-inner-container {
-    margin: 0 auto;
-  }
+  z-index: 91;
 }
 
 .AnchorNav-link-container {
@@ -52,22 +54,57 @@
   position: relative;
 }
 
+.AnchorNav-inner-container {
+  max-width: 1280px;
+  width: 100%;
+  position: relative;
+  z-index: 91; /* must be higher than subdomain nav bar */
+  background: var(--brand-color-canvas-default);
+}
+
+/* Up to large breakpoint */
 @media screen and (max-width: 63.25rem) {
+  .AnchorNav-inner-container--expanded {
+    height: auto;
+  }
+
   .AnchorNav-link-container {
+    display: none;
+    padding-left: var(--base-size-32);
+  }
+  .AnchorNav--expanded .AnchorNav-link-container {
+    display: flex;
     flex-direction: column;
   }
 }
 
+/* Large breakpoint and up */
+@media screen and (min-width: 63.25rem) {
+  .AnchorNav-inner-container {
+    margin: 0 auto;
+    display: flex;
+  }
+}
+
+/*
+ * 3. AnchorNav links
+ */
 .AnchorNav-link {
   display: flex;
   width: calc(100% - 80px);
-  background: var(--brand-color-canvas-default);
   text-decoration: none;
   height: 48px;
   align-items: center;
   justify-items: flex-start;
 }
 
+.AnchorNav--expanded .AnchorNav-link {
+  margin: 0 0 2px; /* allow space for focus border */
+  animation: fade-in 1s;
+  animation-timing-function: cubic-bezier(0.33, 1, 0.68, 1); /* TODO: replace with global token for animation timings */
+}
+
+/* Up to large breakpoint */
 @media screen and (max-width: 63.25rem) {
   .AnchorNav-link {
     position: absolute;
@@ -75,6 +112,7 @@
   }
 }
 
+/* Large breakpoint and up */
 @media screen and (min-width: 63.25rem) {
   .AnchorNav {
     padding: var(--base-size-12) var(--base-size-40);
@@ -124,6 +162,9 @@
   }
 }
 
+/*
+ * 4. AnchorNav link labels
+ */
 .AnchorNav-link-label {
   font-weight: var(--brand-heading-weight-400);
   font-size: var(--brand-text-size-300);
@@ -131,46 +172,15 @@
   font-family: var(--brand-heading-fontFamily);
   letter-spacing: var(--brand-heading-letterSpacing-400);
   color: var(--brand-color-text-default);
-  transition: color cubic-bezier(0.33, 1, 0.68, 1) 0.2s;
+  transition: color cubic-bezier(0.33, 1, 0.68, 1) 0.2s; /* TODO: replace with global token for animation timings */
   white-space: nowrap;
   background-color: var(--brand-color-canvas-default);
 }
 
-.AnchorNav--expanded .AnchorNav-link {
-  margin: 0 0 2px; /* allow space for focus border */
-  animation: fade-in 1s;
-  animation-timing-function: cubic-bezier(0.33, 1, 0.68, 1);
-}
-
-.AnchorNav-menu-button {
-  display: none;
-}
-
+/* Up to large breakpoint */
 @media screen and (max-width: 63.25rem) {
-  .AnchorNav-overlay--expanded {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: -3;
-    width: 100%;
-    height: 100vh;
-    background: rgba(0, 0, 0, 0.5);
-    transform: translateZ(-1px);
-    animation: fade-in 0.5s;
-    animation-timing-function: cubic-bezier(0.33, 1, 0.68, 1);
-  }
-
   .AnchorNav--expanded .AnchorNav-link-label--is-active {
     color: var(--brand-color-focus);
-  }
-
-  .AnchorNav-menu-button {
-    display: flex;
-  }
-
-  .AnchorNav-inner-container--expanded {
-    height: auto;
   }
 
   .AnchorNav-link:not(.AnchorNav-link[data-active='true']) {
@@ -196,17 +206,34 @@
     justify-content: center;
     align-items: flex-start;
   }
+}
 
+/*
+ * 5. AnchorNav menu toggle button (narrow)
+ */
+.AnchorNav-menu-button {
+  display: none;
+}
+
+/* Up to large breakpoint */
+@media screen and (max-width: 63.25rem) {
   .AnchorNav-menu-button {
     all: unset;
     display: inline-flex;
     cursor: pointer;
-    padding: 8px 16px; /*pointer coarse token*/
+    padding: var(--base-size-8) var(--base-size-16);
+    padding-left: 0; /* space for focus */
     align-items: center;
+    height: var(--base-size-32);
+    z-index: 2;
+    border-radius: var(--brand-borderRadius-small);
+  }
+
+  .AnchorNav-menu-button-arrow {
+    padding: 0 calc(var(--base-size-12) / 2);
+    width: 32px;
     height: 32px;
-    margin-left: -16px;
-    z-index: 1;
-    border-radius: 6px;
+    color: var(--brand-color-text-default);
   }
 
   .AnchorNav-menu-button:focus-visible {
@@ -214,7 +241,26 @@
     outline: none;
     box-shadow: 0 0 0 2px var(--brand-color-focus);
   }
+
+  .AnchorNav-overlay--expanded {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: -3;
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.5);
+    transform: translateZ(-1px);
+    animation: fade-in 0.5s;
+    animation-timing-function: cubic-bezier(0.33, 1, 0.68, 1);
+    cursor: pointer;
+  }
 }
+
+/*
+ * 6. AnchorNav action
+ */
 
 .AnchorNav-action {
   z-index: 1;
@@ -228,6 +274,28 @@
   align-self: flex-start;
 }
 
+@media screen and (max-width: 34rem) {
+  .AnchorNav-action {
+    display: none;
+  }
+  .AnchorNav--expanded .AnchorNav-action {
+    display: flex;
+    margin-top: var(--base-size-8);
+  }
+}
+
+@media screen and (min-width: 34rem) and (max-width: 63.25rem) {
+  .AnchorNav-action {
+    display: flex;
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+}
+
+/*
+ * 7. Custom animations
+ */
 @keyframes fade-in {
   0% {
     opacity: 0;
@@ -235,8 +303,4 @@
   100% {
     opacity: 1;
   }
-}
-
-.AnchorNav-menu-button-arrow {
-  color: var(--brand-color-text-default);
 }
