--- a/packages/react/src/AnchorNav/AnchorNav.module.css
+++ b/packages/react/src/AnchorNav/AnchorNav.module.css
@@ -43,7 +43,7 @@
 }
 
 .AnchorNav--stuck {
-  box-shadow: 0 3px 6px rgba(140, 149, 159, 0.15), 0 1px 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 3px 6px rgba(140, 149, 159, 0.15), 0 1px 1px rgba(0, 0, 0, 0.1); /* TODO: replace with a global token */
 }
 
 .AnchorNav--expanded {
@@ -283,7 +283,7 @@
     z-index: -3;
     width: 100%;
     height: 100vh;
-    background: rgba(0, 0, 0, 0.5);
+    background: hsla(var(--base-color-scale-black-0-hsl) / 0.5);
     transform: translateZ(-1px);
     animation: fade-in 0.5s;
     animation-timing-function: cubic-bezier(0.33, 1, 0.68, 1);
