CRA Build Error Resolved

--- a/packages/react/src/SubdomainNavBar/SubdomainNavBar.module.css
+++ b/packages/react/src/SubdomainNavBar/SubdomainNavBar.module.css
@@ -220,7 +220,7 @@
 }
 
 @media screen and (max-width: 767px) {
-  .SubdomainNavBar-link:first-child {
+  .SubdomainNavBar-link:first-of-type {
     padding-top: var(--base-size-24);
   }
 }
