--- a/packages/react/src/AnchorNav/AnchorNav.module.css
+++ b/packages/react/src/AnchorNav/AnchorNav.module.css
@@ -175,7 +175,7 @@
 
   .AnchorNav-link:active::after {
     background-color: var(--brand-AnchorNav-border-nav-pressed);
-    transform: scale(0.6);
+    transform: scale(0.6, 1);
   }
 
   .AnchorNav-link[data-active='true']::after {
