--- a/packages/react/src/AnchorNav/AnchorNav.module.css
+++ b/packages/react/src/AnchorNav/AnchorNav.module.css
@@ -170,7 +170,7 @@
   .AnchorNav-link[data-active='true']::after {
     opacity: 1;
     transform: translate3d(0, 0.2em, 0);
-    transform: scale(0.4);
+    transform: scale(0.4, 0.5);
   }
 
   .AnchorNav-link:active::after {
