--- a/packages/react/src/AnchorNav/AnchorNav.module.css
+++ b/packages/react/src/AnchorNav/AnchorNav.module.css
@@ -282,7 +282,8 @@
     right: 0;
     z-index: -3;
     width: 100%;
-    height: 100vh;
+    height: 100vh; /* Keep as fallback */
+    height: 100dvh;
     background: hsla(var(--base-color-scale-black-0-hsl) / 0.5);
     transform: translateZ(-1px);
     animation: fade-in 0.5s;
