Adjust footnotes to be left aligned on narrow viewports

--- a/packages/react/src/ComparisonTable/ComparisonTable.module.css
+++ b/packages/react/src/ComparisonTable/ComparisonTable.module.css
@@ -17,8 +17,14 @@
  */
 
 .ComparisonTable-footnote {
-  text-align: center;
+  text-align: left;
   margin: var(--base-size-24) 0;
+}
+
+@media screen and (min-width: 34rem) {
+  .ComparisonTable--footnote {
+    text-align: center;
+  }
 }
 
 /*
